--- a/app/views/pages/answer.html.erb
+++ b/app/views/pages/answer.html.erb
@@ -1,4 +1,13 @@
 
-<%= params[:question] %>
-<%= @answer %>
+<h1>Stupid Coaching</h1>
+<div class="question">
+  <p><%= params[:question] %></p>
+  <p>- You</p>
+</div>
+
+<div class="answer">
+<p><%= @answer %></p>
+<p>- Your coach </p>
+</div>
+
 <%= link_to "Ask a new question", ask_path %>
