--- a/app/views/pages/ask.html.erb
+++ b/app/views/pages/ask.html.erb
@@ -1,4 +1,9 @@
-<form action="answer">
-  <input type="text" name="question">
-  <input type="submit" value="Ask!">
-</form>
+<h1>Stupid Coaching</h1>
+<div class="form">
+  <p>Ask your coach anything:</p>
+
+  <form action="answer">
+    <input type="text" name="question" class="input">
+    <input type="submit" value="Ask!" class="button">
+  </form>
+</div>
